# rusty-trash-can

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs  schema.rs  schema_v1.sql  schema_v2.sql
