[package]
name = "rusty-trash-can"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
duration-str = { version = "0.5.0", default-features = false, features = [
    "serde",
    "time",
] }
futures = "0.3.28"
itertools = "0.10.5"
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "next", default-features = false, features = [
    "time",
    "cache",
] }
rusqlite = { version = "0.29.0", features = ["backup", "bundled"] }
serenity = { version = "0.11.5", default-features = false, features = [
    "cache",
    "client",
    "gateway",
    "http",
    "rustls_backend",
    "model",
    "time",
] }
time = "0.3.20"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tokio-rusqlite = "0.4.0"
